# Alloy

./: CMakeLists.txt  README.md  SPTAG.WinRT.nuspec  azure-pipelines.yml  setup.sh
AnnService/: CMakeLists.txt
AnnService/inc/Aggregator/: AggregatorContext.h  AggregatorExecutionContext.h  AggregatorService.h  AggregatorSettings.h
AnnService/inc/Client/: ClientWrapper.h  Options.h
AnnService/inc/Core/: Common.h  CommonDataStructure.h  MetadataSet.h  MultiIndexScan.h  ResultIterator.h  SPMerge.h  SearchQuery.h  SearchResult.h  VectorIndex.h  VectorSet.h
AnnService/inc/Core/BKT/: Index.h
AnnService/inc/Core/Common/: BKTree.h  CommonUtils.h  Dataset.h  DistanceUtils.h  FineGrainedLock.h  Heap.h  IQuantizer.h  InstructionUtils.h  KDTree.h  KNearestNeighborhoodGraph.h  Labelset.h  NeighborhoodGraph.h  OPQQuantizer.h  PQQuantizer.h  QueryResultSet.h  RelativeNeighborhoodGraph.h  SIMDUtils.h  TruthSet.h  WorkSpace.h  WorkSpacePool.h
AnnService/inc/Core/Common/cuda/: Distance.hxx  GPUKNNDistance.hxx  GPUQuantizer.hxx  KNN.hxx  Kmeans.hxx  PerfTestGPU.hxx  Refine.hxx  TPtree.hxx  TailNeighbors.hxx  ThreadHeap.hxx  log.hxx  params.h
AnnService/inc/Core/KDT/: Index.h
AnnService/inc/Core/SPANN/: Compressor.h  ExtraFullGraphSearcher.h  IExtraSearcher.h  Index.h  Options.h  ParameterDefinitionList.h  RecoveryPacket.h  SPANNResultIterator.h  VoidIndex.h
AnnService/inc/Helper/: ArgumentsParser.h  AsyncFileReader.h  CommonHelper.h  Concurrent.h  ConcurrentSet.h  DiskIO.h  DynamicNeighbors.h  LockFree.h  Logging.h  MemoryManager.h  SimpleIniReader.h  SocketWrapper.h  StringConvert.h  ThreadPool.h  Timer.h  VectorSetReader.h
AnnService/inc/Helper/VectorSetReaders/: DefaultReader.h  MemoryReader.h  ReocveryReader.h  TxtReader.h  XvecReader.h
AnnService/inc/Quantizer/: Training.h
AnnService/inc/SSDServing/: MemoryIndexClient.h  Rpc.h  SSDIndex.h  SSDIndexServer.h  SelectHead.h  Utils.h  main.h
AnnService/inc/Server/: QueryParser.h  SearchExecutionContext.h  SearchExecutor.h  SearchService.h  ServiceContext.h  ServiceSettings.h
AnnService/inc/Socket/: Client.h  Connection.h  ConnectionManager.h  Packet.h  RemoteSearchQuery.h  ResourceManager.h  Server.h  SimpleSerialization.h
AnnService/protos/: search_pass.proto
AnnService/src/Aggregator/: AggregatorContext.cpp  AggregatorExecutionContext.cpp  AggregatorService.cpp  main.cpp
AnnService/src/BalancedDataPartition/: main.cpp
AnnService/src/Client/: ClientWrapper.cpp  Options.cpp  main.cpp
AnnService/src/Core/: MetadataSet.cpp  MultiIndexScan.cpp  ResultIterator.cpp  SPANNResultIterator.cpp  VectorIndex.cpp  VectorSet.cpp
AnnService/src/Core/BKT/: BKTIndex.cpp
AnnService/src/Core/Common/: CommonUtils.cpp  DistanceUtils.cpp  IQuantizer.cpp  InstructionUtils.cpp  NeighborhoodGraph.cpp  SIMDUtils.cpp  TruthSet.cpp
AnnService/src/Core/KDT/: KDTIndex.cpp
AnnService/src/Core/SPANN/: ExtraFullGraphSearcher.cpp  SPANNIndex.cpp
AnnService/src/Helper/: ArgumentsParser.cpp  AsyncFileReader.cpp  Base64Encode.cpp  CommonHelper.cpp  Concurrent.cpp  DiskIO.cpp  DynamicNeighbors.cpp  MemoryManager.cpp  SimpleIniReader.cpp  VectorSetReader.cpp
AnnService/src/Helper/VectorSetReaders/: DefaultReader.cpp  TxtReader.cpp  XvecReader.cpp
AnnService/src/IndexBuilder/: main.cpp
AnnService/src/IndexSearcher/: main.cpp
AnnService/src/MemoryIndexClient/: main.cpp
AnnService/src/Quantizer/: main.cpp
AnnService/src/SSDIndexServer/: main.cpp
AnnService/src/SSDServing/: main.cpp
AnnService/src/Server/: QueryParser.cpp  SearchExecutionContext.cpp  SearchExecutor.cpp  SearchService.cpp  ServiceContext.cpp  main.cpp
AnnService/src/Socket/: Client.cpp  Connection.cpp  ConnectionManager.cpp  Packet.cpp  RemoteSearchQuery.cpp  Server.cpp
SPMerge/: CMakeLists.txt  FeedModel.cpp  FeedModel.h  Merger.cpp  Merger.h  MergerTest.cpp  OutputHelper.cpp  PrimaryRescueTest.cpp  RecoveryTest.cpp  RescueTest.cpp  SecondRescueTest.cpp  VictimTest.cpp
Test/WinRTTest/: WinRTTest.cpp
Test/cuda/: buildssd_test.cu  common.hxx  cuda_tests.cpp  gpu_pq_perf.cu  pq_perf.cpp
Test/src/: AlgoTest.cpp  Base64HelperTest.cpp  CommonHelperTest.cpp  ConcurrentTest.cpp  DistanceTest.cpp  FilterTest.cpp  IniReaderTest.cpp  IterativeScanTest.cpp  MultiIndexExperiment.cpp  MultiIndexScanTest.cpp  PerfTest.cpp  ReconstructIndexSimilarityTest.cpp  SIMDTest.cpp  SSDServingTest.cpp  StringConvertTest.cpp  main.cpp
Tools/OPQ/: OPQ_gpu_train_infer.py  README.md
Tools/nni-auto-tune/: config.yml  model.py
Wrappers/WinRT/: AnnIndex.cpp  AnnIndex.h  SPTAG.WinRT.targets
Wrappers/inc/: CLRCoreInterface.h  ClientInterface.h  CoreInterface.h  ManagedObject.h  TransferDataType.h
Wrappers/src/: AssemblyInfo.cpp  CLRCoreInterface.cpp  ClientInterface.cpp  CoreInterface.cpp
docs/: GettingStart.md  LinuxInstallation.md  Parameters.md  WindowsInstallation.md  spmerge-config-sift1m.ini
docs/examples/: features_extractor.py
